create payment service

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,7 @@
     "@apollo/server": "^4.9.5",
     "@as-integrations/fastify": "^2.1.1",
     "@fastify/static": "^6.12.0",
+    "@golevelup/nestjs-stripe": "^0.6.5",
     "@nestjs/apollo": "^12.0.10",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "10.2.8",
@@ -60,6 +61,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
+    "stripe": "^14.19.0",
     "twilio": "^4.22.0",
     "typeorm": "^0.3.17"
   },
